# grimoire

./: .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  add_sentinel.py  apply_grimoire_fixes.py  apply_repo_cleanup.py  apply_wraith_v2.1.py  config.example.json  omega_test.sh  pyproject.toml  setup.py  wraith_ext_clean.py
grimoire/: __init__.py  __main__.py
grimoire/arsenal_omega/: __init__.py  omega.py
grimoire/arsenal_omega/modules/: __init__.py  data_harvester.py  ghost_hollow.py  silicon_death.py
grimoire/codex/: __init__.py
grimoire/core/: __init__.py  banner.py  cli.py  hkk.py  oplog.py  sysinfo.py  tui.py
grimoire/forge/: __init__.py
grimoire/phantom/: __init__.py
grimoire/sentinel/: __init__.py
grimoire/sovereign/: __init__.py
grimoire/utils/: __init__.py
grimoire/vault/: __init__.py
grimoire/voxcrypt/: __init__.py
grimoire/web/: __init__.py
grimoire/wraith/: __init__.py
writeups/: wreath-writeup.md
